--- a/ToDoList/ToDoList/appsettings.json
+++ b/ToDoList/ToDoList/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=ToDoListDb;Trusted_Connection=True;Encrypt=False;MultipleActiveResultSets=true"
+  },
   "AllowedHosts": "*"
 }
